docs(fase3): adicionar documentação da etapa 4 - eureka server